# XGTools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.local.json
Dev/: 00-项目计划.md  01-环境搭建.md  02-移除标题栏.md  03-界面布局.md  04-禁用右键菜单.md  05-设置窗口尺寸.md  07-系统托盘-Windows.md  08-本地存储.md  09-跨平台代码隔离.md  10-启动台图标管理.md  备忘录-Git提交.md  备忘录-常见问题.md  备忘录.md  打包与升级.md
Dev/0-设置/开机自启/: 01-开机自启.md
Dev/0-设置/暗黑模式/: 01-暗黑模式.md
Dev/1-键盘桌宠/按键显示/: 01-按键显示-全局按键监听与多窗口.md  02-按键显示-定位持久化.md  03-按键显示-智能布局.md  04-按键显示-躲避鼠标.md  05-按键显示-按键清除.md
docs/: todo-philosophy.md  待办设计理念.md
src/: App.vue  KeyVisualizerWindow.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: convert_commands.rs  dock_commands.rs  icon_extractor.rs  lib.rs  main.rs  ocr_commands.rs  screenshot_commands.rs  translate_commands.rs  window_detect.rs
src/components/: TitleBar.vue
src/components/settings/: AutostartToggle.vue  ModeToggle.vue
src/components/todo/: AddItemDialog.vue  BacklogSection.vue  DailyTaskSection.vue  HabitCheckinCalendar.vue  HabitSection.vue  ReminderSection.vue  TaskFlowSection.vue
src/components/todo/habit/: HabitClickableCalendar.vue  HabitDetailPanel.vue  HabitExportDialog.vue  HabitMonthlyOverview.vue  HabitReportDialog.vue  HabitStatCard.vue  HabitTabView.vue  HabitWeeklyTable.vue  HabitYearlyHeatmap.vue
src/components/ui/input/: Input.vue
src/components/ui/select/: Select.vue  SelectContent.vue  SelectItem.vue  SelectTrigger.vue  SelectValue.vue
src/components/ui/slider/: Slider.vue
src/components/ui/textarea/: Textarea.vue
src/composables/: usePomodoroTimer.ts  useTodoStore.ts
src/dock/: AppGrid.vue  AppIcon.vue  DockWindow.vue  PageIndicator.vue  dockStore.ts
src/screenshot/: PinWindow.vue  ScreenshotWindow.vue  annotations.ts  selection.ts  types.ts  windowSnap.ts
src/types/: convert.ts  index.ts  todo.ts
src/views/: Convert.vue  Dock.vue  Habits.vue  Home.vue  KeyboardPet.vue  Screenshot.vue  Timer.vue  Todo.vue  Translate.vue
