[package]
name = "xgtools"
version = "0.1.0"
description = "A Tools"
authors = ["xxg"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xgtools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
tauri-plugin-store = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-process = "2.3.1"
arboard = "3.4"
image = "0.25"
tokio = { version = "1", features = ["rt", "macros", "process", "io-util"] }
xcap = "0.0.14"
rtree_rs = "0.1.4"
atree = "0.5.2"
rayon = "1.10"
thiserror = "2"
dirs = "6"
paddle-ocr-rs = "0.6"
ort = { version = "=2.0.0-rc.10", default-features = false }
num_cpus = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "winuser", "wingdi", "combaseapi", "objbase", "commoncontrols", "shobjidl_core", "libloaderapi", "unknwnbase", "minwinbase", "wtypesbase", "objidl"] }
lnk = "0.5"
window-vibrancy = "0.5"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging"] }
uiautomation = "0.24"
clipboard-win = "5"

# 所有第三方包开优化（参考 Snow-Shot），否则 ONNX Runtime 在 dev 模式下极慢
[profile.dev.package."*"]
opt-level = 2
